Presets in terrain_generate_modal shown from a list instead of hardcoded
Conflicts:
	app/templates/editor/level/modal/terrain_randomize.jade

--- a/app/styles/editor/level/modal/terrain_randomize.sass
+++ b/app/styles/editor/level/modal/terrain_randomize.sass
@@ -126,3 +126,6 @@
   .hard-option .preset-name
     border-top: 25px solid black
     color: white
+    
+  .capitalize
+    text-transform: capitalize
