Half the account page is there

--- a/app/styles/account/home.sass
+++ b/app/styles/account/home.sass
@@ -1,5 +1,12 @@
-#user-home-view
-  #avatar
-    width: 150px
+#account-home-view
+  dl
+    margin-bottom: 0px
 
-  content: "blub"
+  img#picture
+    max-width: 50%
+
+  .panel
+    margin-bottom: 10px
+
+  h2
+    margin-bottom: 0px
