--- a/app/templates/account/home.jade
+++ b/app/templates/account/home.jade
@@ -1,8 +1,100 @@
 extends /templates/base
 
 block content
+  .clearfix
+    .col-sm-6.clearfix
+      h2 Account Settings
+      hr
+
+      .panel.panel-default
+        .panel-heading
+          h3.panel-title
+            a(href="account/settings#me") Me
+        .panel-body
+          dl
+            dt Name
+            dd=me.get('name')
+            dt Email
+            dd abe@lincoln
+      .panel.panel-default
+        .panel-heading
+          h3.panel-title
+            a(href="account/settings#picture") Picture
+        .panel-body.text-center
+          img#picture(src="#{me.getPhotoURL(150)}" alt="")
+      .panel.panel-default
+        .panel-heading
+          h3.panel-title
+            a(href="account/settings#wizard") Wizard
+        //.panel-body
+          | Lorem Ipsum
+      .panel.panel-default
+        .panel-heading
+          h3.panel-title
+            a(href="account/settings#emails") Emails
+        .panel-body
+          .form
+            .form-group.checkbox
+              label.control-label(for="email_archmageNews")
+                span General
+              input#email_archmageNews(name="email_archmageNews", type="checkbox", checked=subs.generalNews, disabled="true")
+            .form-group.checkbox
+              label.control-label(for="email_archmageNews")
+                span.spr(data-i18n="classes.archmage_title")
+                  | Archmage
+                span(data-i18n="classes.archmage_title_description")
+                  | (Coder)
+              input#email_archmageNews(name="email_archmageNews", type="checkbox", checked=subs.archmageNews, disabled="true")
+            .form-group.checkbox
+              label.control-label(for="email_artisanNews")
+                span.spr(data-i18n="classes.artisan_title")
+                  | Artisan
+                span(data-i18n="classes.artisan_title_description")
+                  | (Level Builder)
+              input#email_artisanNews(name="email_artisanNews", type="checkbox", checked=subs.artisanNews, disabled="true")
+            .form-group.checkbox
+              label.control-label(for="email_adventurerNews")
+                span.spr(data-i18n="classes.adventurer_title")
+                  | Adventurer
+                span(data-i18n="classes.adventurer_title_description")
+                  | (Level Playtester)
+              input#email_adventurerNews(name="email_adventurerNews", type="checkbox", checked=subs.adventurerNews, disabled="true")
+            .form-group.checkbox
+              label.control-label(for="email_scribeNews")
+                span.spr(data-i18n="classes.scribe_title")
+                  | Scribe
+                span(data-i18n="classes.scribe_title_description")
+                  | (Article Editor)
+              input#email_scribeNews(name="email_scribeNews", type="checkbox", checked=subs.scribeNews, disabled="true")
+            .form-group.checkbox
+              label.control-label(for="email_diplomatNews")
+                span.spr(data-i18n="classes.diplomat_title")
+                  | Diplomat
+                span(data-i18n="classes.diplomat_title_description")
+                  | (Translator)
+              input#email_diplomatNews(name="email_diplomatNews", type="checkbox", checked=subs.diplomatNews, disabled="true")
+            .form-group.checkbox
+              label.control-label(for="email_ambassadorNews")
+                span.spr(data-i18n="classes.ambassador_title")
+                  | Ambassador
+                span(data-i18n="classes.ambassador_title_description")
+                  | (Support)
+              input#email_ambassadorNews(name="email_ambassadorNews", type="checkbox", checked=subs.ambassadorNews, disabled="true")
+
+      .panel.panel-default
+        .panel-heading
+          h3.panel-title
+            a(href="account/settings#password") Password
+      .panel.panel-default
+        .panel-heading
+          h3.panel-title
+            a(href="account/settings#job-profile") Job Profile
+    .col-sm-6
+      h2 Recently Played
+      hr
+
+//block content
   h2 Account
-  div
   .col-sm-3.text-center
     img#avatar(src="#{me.getPhotoURL(100)}")
     h3=me.get('name') || 'Anoner'
@@ -10,11 +102,22 @@ block content
     dl.dl-horizontal
       if me.get('firstName') || me.get('lastName')
         dt Full name
-        dd=me.get('firstName') + ' ' + me.get('lastName')
+        dd=me.get('firstName') || '' + ' ' + me.get('lastName') || ''
       dt Email
       dd
         span.spr=me.get('email')
-        span (subscriptions)
+        //span (subscriptions)
+      hr
+      - var dateCreated = me.get('dateCreated');
+      - var signedCLA = me.get('signedCLA');
+      - console.log(moment)
+      dt Member since
+      dd= moment(dateCreated).format('MMMM Do YYYY')
+      if signedCLA
+        dt Signed CLA
+        dd= moment(signedCLA).format('MMMM Do YYYY')
+
+      // TODO Have social network icons here for easy linking
 
   .col-sm-3
     h3 Account
@@ -33,3 +136,5 @@ block content
         a Statistics
       li
         a Code
+
+
