Some work the job profile page. Added a demo view, mainly added a modal view for viewing raw player code.

--- a/app/styles/account/profile.sass
+++ b/app/styles/account/profile.sass
@@ -127,13 +127,14 @@
               text-align: center
 
           ul.links
+            text-align: center
             li.has-icon
               display: inline-block
               img
                 margin: 0 0 10px 0
             li.has-icon:not(:nth-child(5))
               img
-                margin: 0 10px 10px 0
+                margin: 0 5px 10px 5px
 
           #contact-candidate
             margin-top: 20px
