--- a/app/templates/base.jade
+++ b/app/templates/base.jade
@@ -49,7 +49,7 @@ body
             a.header-font(href='/community', data-i18n="nav.community") Community
 
   block outer_content
-    #outer-content-wrapper
+    #outer-content-wrapper(class=showBackground ? 'show-background' : '')
       #intermediate-content-wrapper
         #inner-content-wrapper
           .main-content-area
