--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -24,13 +24,16 @@ h1 h2 h3 h4
   @include box-sizing(border-box)
 
 #outer-content-wrapper
+  background: #B4B4B4
+  
+#outer-content-wrapper.show-background
   background: #8cc63f url(/images/pages/base/repeat-tile.png) top center
 
-#intermediate-content-wrapper
-  background: url(/images/pages/base/sky_repeater.png) repeat-x
+  #intermediate-content-wrapper
+    background: url(/images/pages/base/sky_repeater.png) repeat-x
 
-#inner-content-wrapper
-  background: url(/images/pages/base/background_texture.png) top center no-repeat
+  #inner-content-wrapper
+    background: url(/images/pages/base/background_texture.png) top center no-repeat
 
 #front-summary-points-left
   width: 250px
@@ -70,7 +73,7 @@ h1 h2 h3 h4
   &:hover
     color: $white
 
-a[data-toggle="modal"]
+a
   cursor: pointer
 
 .share-buttons, .partner-badges
