Removed background from job profile view.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -23,14 +23,14 @@ h1 h2 h3 h4
   padding: 14px 12px 5px 12px
   @include box-sizing(border-box)
 
-#outer-content-wrapper
+#outer-content-wrapper.show-background
   background: #8cc63f url(/images/pages/base/repeat-tile.png) top center
 
-#intermediate-content-wrapper
-  background: url(/images/pages/base/sky_repeater.png) repeat-x
+  #intermediate-content-wrapper
+    background: url(/images/pages/base/sky_repeater.png) repeat-x
 
-#inner-content-wrapper
-  background: url(/images/pages/base/background_texture.png) top center no-repeat
+  #inner-content-wrapper
+    background: url(/images/pages/base/background_texture.png) top center no-repeat
 
 #front-summary-points-left
   width: 250px
