Restored legacy candidates view

--- a/app/templates/admin.jade
+++ b/app/templates/admin.jade
@@ -25,6 +25,8 @@ block content
       a(href="/admin/level_sessions", data-i18n="admin.av_entities_active_instances_url") Active Instances
     li
       a(href="/admin/employer_list", data-i18n="admin.av_entities_employer_list_url") Employer List
+    li
+      a(href="/admin/candidates") Candidate List
         
   h4(data-i18n="admin.av_other_sub_title") Other
 
