--- a/app/styles/docs/components.sass
+++ b/app/styles/docs/components.sass
@@ -15,8 +15,11 @@
       .doc-name
         color: rgb(139, 69, 19)
 
+    .index-column
+      width: 25%
   
     .documentation-column
+      width: 75%
   
       .specialList
         list-style-type: none
