Updated code language logos. Added code language blurb i18n tags.

--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -167,6 +167,10 @@
         h2
           margin: 15px 0 5px
 
+        p
+          overflow: hidden
+          height: 40px
+
     .secondary-code-languages
       margin-left: -10px
 
@@ -201,17 +205,22 @@
           margin: 0
           padding: 0
 
+        p
+          white-space: nowrap
+          text-overflow: ellipsis
+          overflow: hidden
+
       #coffeescript .code-language-logo
-        background: transparent url(/images/pages/home/language_logo_coffeescript.png) no-repeat center
+        background: transparent url(/images/common/code_languages/coffeescript_small.png) no-repeat center
 
       #clojure .code-language-logo
-        background: transparent url(/images/pages/home/language_logo_clojure.png) no-repeat center
+        background: transparent url(/images/common/code_languages/clojure_small.png) no-repeat center
 
       #lua .code-language-logo
-        background: transparent url(/images/pages/home/language_logo_lua.png) no-repeat center
+        background: transparent url(/images/common/code_languages/lua_small.png) no-repeat center
 
       #io .code-language-logo
-        background: transparent url(/images/pages/home/language_logo_io.png) no-repeat center
+        background: transparent url(/images/common/code_languages/io_small.png) no-repeat center
 
   
 #multiplayer-launch-modal
