--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -10,14 +10,14 @@ block content
         .code-language#javascript(data-code-language='javascript')
           .code-wizard
           h2 JavaScript
-          p The language of the web. Great for writing websites, web apps, HTML5 games, and servers.
+          p(data-i18n="home.javascript_blurb") The language of the web. Great for writing websites, web apps, HTML5 games, and servers.
 
       .col-md-6
         .code-language.beta#python(data-code-language='python')
           .code-wizard
           .code-language-beta
           h2 Python
-          p Simple yet powerful, Python is a great general purpose programming language.
+          p(data-i18n="home.python_blurb") Simple yet powerful, Python is a great general purpose programming language.
 
     .secondary-code-languages.row
       .col-md-3
@@ -26,7 +26,7 @@ block content
           .code-wizard
           .code-language-beta
           h3 CoffeeScript
-          p Nicer JavaScript syntax
+          p(data-i18n="home.coffeescript_blurb") Nicer JavaScript syntax.
 
       .col-md-3
         .code-language.beta#clojure(data-code-language='clojure')
@@ -34,7 +34,7 @@ block content
           .code-wizard
           .code-language-beta
           h3 Clojure
-          p A modern Lisp
+          p(data-i18n="home.clojure_blurb") A modern Lisp.
 
       .col-md-3
         .code-language.beta#lua(data-code-language='lua')
@@ -42,7 +42,7 @@ block content
           .code-wizard
           .code-language-beta
           h3 Lua
-          p Game scripting language
+          p(data-i18n="home.lua_blurb") Game scripting language.
 
       .col-md-3
         .code-language.beta#io(data-code-language='io', title="Careful: Io is still quite buggy")
@@ -50,7 +50,7 @@ block content
           .code-wizard
           .code-language-beta
           h3 Io
-          p Simple but obscure
+          p(data-i18n="home.io_blurb") Simple but obscure.
 
   .alert.alert-danger.lt-ie10
     strong(data-i18n="home.no_ie") CodeCombat does not run in Internet Explorer 9 or older. Sorry!
