Adds an initial dungeon preset, refactors border code to properly create dungeon walls

--- a/app/templates/editor/level/modal/terrain_randomize.jade
+++ b/app/templates/editor/level/modal/terrain_randomize.jade
@@ -12,5 +12,5 @@ block modal-body-content
             div.preset-size.name-label.capitalize
               span(data-i18n="editor."+size)  #{size}
             div.preset-name.capitalize
-              span(data-i18n="editor.grassy") #{preset.type}
+              span(data-i18n="editor."+preset.type) #{preset.type}
 block modal-footer
