--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -33,7 +33,8 @@ block header
             - var patches = level.get('patches')
             if patches && patches.length
               span.badge= patches.length
-      
+        li
+          a(href="#docs-component-view", data-toggle="tab", data-i18n="editor.docs-component-view") Documentation
       .navbar-header
         span.navbar-brand #{level.attributes.name}
 
@@ -113,6 +114,8 @@ block outer_content
     
       div.tab-pane#editor-level-patches
         .patches-view
+
+      div.tab-pane#docs-component-view
 
     div#error-view
 
