Add filter alerts to employer page

--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -63,7 +63,15 @@
       cursor: pointer
       input
         margin-right: 5px
-
+  #saved-filter-table
+    display: none
+    width: 100%
+    tbody 
+      tr:nth-child(even) 
+        background-color: #CBCBCB 
+    margin-bottom: 20px
+    .deletion-row
+      text-align: center
   .get-started-button
     vertical-align: text-bottom
     margin-left: 10px
