Added login message for anonymous users on job profile

--- a/app/styles/account/profile.sass
+++ b/app/styles/account/profile.sass
@@ -2,7 +2,13 @@
 
 #profile-view
   $sideBackground: rgb(220, 220, 220)
-
+  #login-message
+    h1, h2, h3, h4
+      font-family: Arial, Helvetica, sans-serif
+      color: #333333
+    width: 100%
+    text-align: center
+    margin-top: 200px
   .profile-control-bar
     background-color: $sideBackground
     width: 100%
