Added contributor categories to user profile page

--- a/app/styles/account/home.sass
+++ b/app/styles/account/home.sass
@@ -1,3 +1,6 @@
+@import "../bootstrap/variables"
+@import "../bootstrap/mixins"
+
 #account-home-view
   dl
     margin-bottom: 0px
@@ -10,3 +13,6 @@
 
   h2
     margin-bottom: 0px
+
+  .panel-title > a
+    margin-left: 5px
