--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -21,7 +21,8 @@ h1 h2 h3 h4
   margin: 56px auto 0
   min-height: 600px
   padding: 14px 12px 5px 12px
-  @include box-sizing(border-box)
+  +box-sizing(border-box)
+  +clearfix()
 
 #outer-content-wrapper
   background: #B4B4B4
