--- a/app/styles/user/home.sass
+++ b/app/styles/user/home.sass
@@ -27,3 +27,28 @@
       color: white
       text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000
 
+  .list-group-item > a
+    color: #555555
+    margin-left: 5px
+
+.contributor-categories
+  list-style: none
+  padding: 0px
+
+  > .contributor-category
+    outline: 1px solid black
+    margin-bottom: 15px
+
+    > .contributor-image
+      border: none
+      width: 100%
+      border-bottom: 1px solid black
+
+    > .contributor-title
+      text-align: center
+      padding: 5px 0px
+      margin: 0px
+      background: white
+
+.vertical-buffer
+  padding: 10px 0px
