--- a/app/templates/account/home.jade
+++ b/app/templates/account/home.jade
@@ -7,6 +7,7 @@ block content
       hr
       .panel.panel-default
         .panel-heading
+          i.glyphicon.glyphicon-user.pull-left
           h3.panel-title
             a(href="account/settings#me") Me
         .panel-body
@@ -17,18 +18,21 @@ block content
             dd abe@lincoln
       .panel.panel-default
         .panel-heading
+          i.glyphicon.glyphicon-picture.pull-left
           h3.panel-title
             a(href="account/settings#picture") Picture
         .panel-body.text-center
           img#picture(src="#{me.getPhotoURL(150)}" alt="")
       .panel.panel-default
         .panel-heading
+          i.glyphicon.glyphicon-user.pull-left
           h3.panel-title
             a(href="account/settings#wizard") Wizard
         //.panel-body
           | Lorem Ipsum
       .panel.panel-default
         .panel-heading
+          i.glyphicon.glyphicon-envelope.pull-left
           h3.panel-title
             a(href="account/settings#emails") Emails
         .panel-body
@@ -82,10 +86,12 @@ block content
 
       .panel.panel-default
         .panel-heading
+          i.glyphicon.glyphicon-wrench.pull-left
           h3.panel-title
             a(href="account/settings#password") Password
       .panel.panel-default
         .panel-heading
+          i.glyphicon.glyphicon-briefcase.pull-left
           h3.panel-title
             a(href="account/settings#job-profile") Job Profile
     .col-sm-6
